[project]
name = "s4-slicer"
version = "0.1.0"
description = "A generic non-planar slicer, that can print almost any part without support."
authors = [
    {name = "Bird, Joshua"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tetgen (>=0.6.5,<0.7.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pyvista (>=0.45.0,<0.46.0)",
    "open3d (>=0.19.0,<0.20.0)",
    "pygcode (>=0.2.1,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "imageio (>=2.37.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
